# ocsigen-toolkit

./: .gitignore  .howdocgen  .jenkins.sh  .ocamlformat  .travis.yml  CHANGES  Makefile  Makefile.options  README.md  api  dune  dune-project  how.json  index.html  indexdoc.client  indexdoc.server  manual  ocsigen-toolkit-compat.opam  ocsigen-toolkit.install  ocsigen-toolkit.opam  opam  versions.json
.github/workflows/: build.yml  doc.yml  siteupdate.yml
0.99/api/client/: Ot_buttons.html  Ot_calendar.html  Ot_carousel.html  Ot_drawer.html  Ot_lib.List.html  Ot_lib.html  Ot_nodeready.html  Ot_noderesize.html  Ot_picture_uploader.html  Ot_popup.html  Ot_popup.tabbable-c.html  Ot_range.html  Ot_size.html  Ot_social_meta.html  Ot_spinner.html  Ot_sticky.html  Ot_style.html  Ot_swipe.html  Ot_time_picker.html  Ot_toggle.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Ot_buttons.html  type_Ot_calendar.html  type_Ot_carousel.html  type_Ot_drawer.html  type_Ot_lib.List.html  type_Ot_lib.html  type_Ot_nodeready.html  type_Ot_noderesize.html  type_Ot_picture_uploader.html  type_Ot_popup.html  (+10 more)
0.99/api/server/: Ot_buttons.html  Ot_calendar.html  Ot_carousel.html  Ot_drawer.html  Ot_lib.List.html  Ot_lib.html  Ot_nodeready.html  Ot_noderesize.html  Ot_picture_uploader.html  Ot_popup.html  Ot_range.html  Ot_size.html  Ot_social_meta.html  Ot_spinner.html  Ot_sticky.html  Ot_style.html  (+32 more)
0.99/manual/: intro.html
1.0/: index.html
1.0/manual/: intro.html
1.1.0/manual/: intro.html
2.0/manual/: intro.html
2.2.0/manual/: intro.html
2.7.0/manual/: intro.html
4.2/: intro.md  llms-full.txt
4.2/ocsigen-toolkit.client/: Ot_carousel.md  Ot_form-Tabbable-class-type-t.md  Ot_icons-D.md  Ot_icons-Make-argument-1-A-Form.md  Ot_icons.md  Ot_lib.md  Ot_page_transition-Make-argument-1-Conf.md  Ot_page_transition-Make.md  Ot_page_transition.md  Ot_picture_uploader.md  Ot_popup.md  Ot_spinner.md  Ot_sticky.md  index.html
4.2/ocsigen-toolkit.server/: Ot_drawer.md  Ot_form.md  Ot_icons-Make-argument-1-A-Raw-Info.md  Ot_icons-Make-argument-1-A-Raw-Unsafe.md  Ot_icons-Make-argument-1-A-Unsafe.md  Ot_icons.md  Ot_lib.md  Ot_nodeready.md  Ot_noderesize.md  Ot_picture_uploader.md  Ot_spinner.md  Ot_style.md  Ot_time_picker.md  Ot_tip.md  Ot_tongue.md  index.html  index.md
css/: ot_buttons.css  ot_carousel.css  ot_color_picker.css  ot_datetime.css  ot_defaults.css  ot_drawer.css  ot_form.css  ot_grid.css  ot_icons.css  ot_page_transition.css  ot_picture_uploader.css  ot_popup.css  ot_pull_to_refresh.css  ot_spinner.css  ot_sticky.css  ot_tip.css  ot_tongue.css
dev/: index.html  index.md  intro.html  intro.md  llms-full.txt  llms.txt
dev/manual/: intro.html
dev/ocsigen-toolkit.client/: Ot_buttons.md  Ot_calendar.md  Ot_color_picker.md  Ot_form-Tabbable.md  Ot_form.md  Ot_icons-Make-argument-1-A-Form.md  Ot_icons-Make-argument-1-A-Raw-Xml.md  Ot_icons-Make-argument-1-A-Raw.md  Ot_icons-Make-argument-1-A.md  Ot_icons-Make.md  Ot_lib-List.md  Ot_nodeready.md  Ot_noderesize.md  Ot_page_transition-Make.md  Ot_page_transition-module-type-PAGE_TRANSITION_CONF.md  Ot_page_transition.md  Ot_range.md  Ot_size.md  Ot_sticky.md  Ot_style.md  Ot_swipe.md  Ot_tip.md  index.html  index.md
dev/ocsigen-toolkit.server/: Ot_calendar.md  Ot_carousel.md  Ot_icons-F.md  Ot_icons-Make-argument-1-A-Form.md  Ot_icons-Make-argument-1-A-Info.md  Ot_icons-Make-argument-1-A-Raw-Xml-W.md  Ot_icons-Make-argument-1-A-Raw.md  Ot_icons-Make-argument-1-A-Xml.md  Ot_icons-Make-argument-1-A.md  Ot_page_transition.md  Ot_popup.md  Ot_pulltorefresh.md  Ot_size.md  Ot_sticky.md  Ot_toggle.md  index.html
doc/: README.md  client.indexdoc  dune  index.mld  indexdoc.client  indexdoc.server  intro.mld  server.indexdoc  template.wiki  wodoc
doc/manual-wiki/: intro.wiki
latest/manual/: intro.html
ocsigen-dune-rules/ocsigen-dune-rules/: gen_rules.ml  main.ml
opam/: descr  opam  url
src/widgets/: calendar.eliom  carousel.eliom  drawer.eliomi  dune  form.eliom  form.eliomi  nodeready.eliomi  noderesize.eliom  ot_buttons.eliom  ot_buttons.eliomi  ot_calendar.eliom  ot_calendar.eliomi  ot_carousel.eliom  ot_carousel.eliomi  ot_color_picker.eliom  ot_color_picker.eliomi  ot_drawer.eliom  ot_drawer.eliomi  ot_form.eliom  ot_form.eliomi  ot_grid.eliom  ot_grid.eliomi  ot_icons.eliom  ot_lib.eliom  ot_lib.eliomi  ot_nodeready.eliom  ot_nodeready.eliomi  ot_noderesize.eliom  ot_noderesize.eliomi  ot_page_transition.eliom  ot_page_transition.eliomi  ot_pervasives.eliom  ot_pervasives.eliomi  ot_picture_uploader.eliom  ot_picture_uploader.eliomi  ot_picture_uploader2.eliom  ot_picture_uploader2.eliomi  ot_popup.eliom  ot_popup.eliomi  ot_pulltorefresh.eliom  (+24 more)
src/widgets/Ot/: buttons.eliom  buttons.eliomi  calendar.eliom  calendar.eliomi  carousel.eliom  carousel.eliomi  color_picker.eliom  color_picker.eliomi  drawer.eliom  form.eliom  form.eliomi  icons.eliom  icons.eliomi  lib.eliom  lib.eliomi  nodeready.eliom  nodeready.eliomi  noderesize.eliom  noderesize.eliomi  page_transition.eliom  page_transition.eliomi  picture_uploader.eliom  picture_uploader.eliomi  popup.eliom  popup.eliomi  pulltorefresh.eliom  pulltorefresh.eliomi  range.eliom  range.eliomi  size.eliom  spinner.eliom  sticky.eliom  sticky.eliomi  style.eliom  style.eliomi  swipe.eliom  time_picker.eliom  tip.eliom  toggle.eliomi  tongue.eliom  (+1 more)
src/widgets/client/: dune  dune.client
tools/: gen_dune.ml
(+1554 files in other folders)
