(include_subdirs qualified)

(library
 (public_name ocsigen-toolkit.client)
 (name widgets_client)
 (modes byte)
 (wrapped false)
 (preprocess
  (pps js_of_ocaml-ppx lwt_ppx js_of_ocaml-ppx_deriving_json))
 (libraries eliom.client calendar js_of_ocaml js_of_ocaml-lwt))

(include dune.client)

(rule
 (target dune.client)
 (mode promote)
 (deps
  (glob_files ../Ot/*.eliom)
  (glob_files ../Ot/*.eliomi))
 (action
  (with-stdout-to
   %{target}
   (run
    ocsigen-dune-rules
    gen
    --subdir
    Ot
    --server-objs-dir
    ../.widgets_server.objs/byte
    ../Ot))))
